--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
@@ -6,3 +6,14 @@
   box-sizing: border-box;
   font-family: 'DM Serif Text', serif;
 }
+.sidebar{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 78px;
+    background: #F8F9FA;
+    padding: 6px 14px;
+    z-index: 99;
+    transition: all 0.5s ease;
+  }
