--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
@@ -17,3 +17,42 @@
     z-index: 99;
     transition: all 0.5s ease;
   }
+  .sidebar.open{
+    width: 285px;
+  }
+  .sidebar .logo-details{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+  .sidebar .logo-details .icon{
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+  .sidebar .logo-details .logo_name{
+    color: #2D3748;
+    text-decoration: underline;
+    font-weight: 600;
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+  .sidebar.open .logo-details .icon,
+  .sidebar.open .logo-details .logo_name{
+    opacity: 1;
+  }
+  .sidebar .logo-details #btn{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    font-size: 22px;
+    transition: all 0.4s ease;
+    font-size: 23px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s ease;
+  }
+  .sidebar.open .logo-details #btn{
+    text-align: right;
+  }
