--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
@@ -56,3 +56,73 @@
   .sidebar.open .logo-details #btn{
     text-align: right;
   }
+  .sidebar i{
+    color: #4FD1C5;
+    height: 60px;
+    min-width: 50px;
+    font-size: 28px;
+    text-align: center;
+    line-height: 60px;
+  }
+  #logoprin{
+    margin-left: 20px ;
+    margin-right: 5px;
+    color: #000000;
+    height: 60px;
+    min-width: 50px;
+    font-size: 28px;
+    text-align: center;
+    line-height: 60px;
+  }
+  
+  #hogar{
+    display: none;
+    margin-left: 16px;
+    margin-top: 36px;
+    margin-bottom: 20px;
+    color: #2D3748; 
+  }
+  #hogar2{
+    display: none;
+    margin-left: 16px;
+    margin-top: 36px;
+    margin-bottom: 20px;
+    color: #2D3748; 
+  }
+  
+  
+  .sidebar .nav-list{
+    margin-top: 20px;
+    height: 100%;
+  }
+  .sidebar li{
+    position: relative;
+    margin: 8px 0;
+    list-style: none; 
+  }
+  .sidebar li .tooltip{
+    position: absolute;
+    top: -20px;
+    left: calc(100% + 15px);
+    z-index: 3;
+    background: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    padding: 6px 12px;
+    border-radius: 4px;
+    font-size: 15px;
+    font-weight: 400;
+    opacity: 0;
+    white-space: nowrap;
+    pointer-events: none;
+    transition: 0s;
+  }
+  .sidebar li:hover .tooltip{
+    opacity: 1;
+    pointer-events: auto;
+    transition: all 0.4s ease;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .sidebar.open li .tooltip{
+    display: none;
+  }
