--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
@@ -74,7 +74,6 @@
     text-align: center;
     line-height: 60px;
   }
-  
   #hogar{
     display: none;
     margin-left: 16px;
@@ -89,8 +88,6 @@
     margin-bottom: 20px;
     color: #2D3748; 
   }
-  
-  
   .sidebar .nav-list{
     margin-top: 20px;
     height: 100%;
@@ -125,4 +122,91 @@
   }
   .sidebar.open li .tooltip{
     display: none;
+  }
+  .sidebar input{
+    font-size: 15px;
+    color: #2D3748;
+    font-weight: 400;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    width: 50px;
+    border: none;
+    border-radius: 12px;
+    transition: all 0.5s ease;
+    background: #1d1b31;
+  }
+  .sidebar.open input{
+    padding: 0 20px 0 50px;
+    width: 100%;
+  }
+  .sidebar .bx-search{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    font-size: 22px;
+    background: #1d1b31;
+    color: #FFF;
+  }
+  .sidebar.open .bx-search:hover{
+    background: #1d1b31;
+    color: #FFF;
+  }
+  .sidebar .bx-search:hover{
+    background: #FFF;
+    color: #11101d;
+  }
+  .sidebar li a{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+    align-items: center;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    background: #F8F9FA;
+  }
+  .sidebar li a:hover{
+    background: #FFF;
+  }
+  
+  
+  .sidebar li a .links_name{
+    color: #A0AEC0;
+    font-size: 15px;
+    font-weight: 400;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.4s;
+  }
+  .sidebar.open li a .links_name{
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .sidebar li a:hover .links_name{
+    transition: all 0.5s ease;
+    margin-left: 15px;
+    color: #2D3748;
+    background: none;
+  }
+  .sidebar li a:hover i{
+    transition: all 0.5s ease;
+    color: #fdfdfd;
+    background-color: #4FD1C5 ;
+  }
+  .sidebar li i{
+    height: 50px;
+    line-height: 50px;
+    font-size: 18px;
+    border-radius: 12px;
+  }
+  
+  .sidebar li img{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 6px;
+    margin-right: 10px;
   }
