--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/0. SideBar/sidebar.css
@@ -170,8 +170,7 @@
   .sidebar li a:hover{
     background: #FFF;
   }
-  
-  
+    
   .sidebar li a .links_name{
     color: #A0AEC0;
     font-size: 15px;
@@ -210,3 +209,105 @@
     border-radius: 6px;
     margin-right: 10px;
   }
+  .sidebar li.profile .name,
+  .sidebar li.profile .job{
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    white-space: nowrap;
+  }
+  .sidebar li.profile .job{
+    font-size: 12px;
+  }
+  .sidebar .profile #log_out{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background: #1d1b31;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 0px;
+    transition: all 0.5s ease;
+  }
+  .sidebar.open .profile #log_out{
+    width: 50px;
+    background: none;
+  }
+  .home-section{
+    position: relative;
+    background: #E4E9F7;
+    min-height: 100vh;
+    top: 0;
+    left: 78px;
+    width: calc(100% - 78px);
+    transition: all 0.5s ease;
+    z-index: 2;
+  }
+  .sidebar.open ~ .home-section{
+    left: 285px;
+    width: calc(100% - 265px);
+  }
+  .home-section .text{
+    display: inline-block;
+    color: #11101d;
+    font-size: 25px;
+    font-weight: 500;
+    margin: 18px
+  }
+    
+  @media (max-width: 420px) {
+    .sidebar li .tooltip{
+      display: none;
+    }
+    .hogar {
+      display: none;
+    }
+  }
+  
+  @media(max-width: 992px){
+    .sidebar {
+      display: flex;
+      width: 100%;
+      justify-content: space-between ;
+      height: auto;
+      padding: 0px;
+    }
+  
+    ul {
+      padding-left: 0px !important;
+    }
+  
+    .sidebar.open {
+      width: 100%;
+      flex-direction: column;
+    }
+  
+    .logo-details {
+      width: 100%;
+    }
+  
+    .sidebar .nav-list {
+      height: auto;
+      margin-top: 0px !important;
+      text-align: center;
+    }
+  
+    .sidebar li {
+      margin: 0px !important;
+      padding: 0px !important;
+    }
+  
+    .sidebar li a {
+      display: flex;
+      width: 50%;
+      margin: 0px auto;
+    }
+    
+    .datosper {
+      height: auto;
+      margin-top: 40px;
+      margin-right: 2em;
+    }
+  }  
