--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P2.Nota por Mes_Docente.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P2.Nota por Mes_Docente.css
@@ -24,4 +24,30 @@ body{
     border-radius: 3px;
 }
 
+h1,h2,h3{
+    font-family: 'DM Serif Text';
+    font-style: italic;
+}
+
+.label {
+    border-radius: 3px;
+    font-size: 0.875em;
+    font-weight: 600;
+}
+.user-list tbody td .user-subhead {
+    font-size: 0.875em;
+    font-style: italic;
+  
+}
+.user-list tbody td .user-link {
+    display: block;
+    font-size: 1.25em;
+    padding-top: 3px;
+    margin-left: 60px;
+    
+}
+a {
+    color: #4FD1C5;
+    outline: none!important;
+}
 
