--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.css
@@ -9,3 +9,27 @@ body{
 .main-box.no-header {
     padding-top: 20px;
 }
+
+.main-box {
+    background: #FFFFFF;
+    -webkit-box-shadow: 1px 1px 2px 0 #CCCCCC;
+    -moz-box-shadow: 1px 1px 2px 0 #CCCCCC;
+    -o-box-shadow: 1px 1px 2px 0 #CCCCCC;
+    -ms-box-shadow: 1px 1px 2px 0 #CCCCCC;
+    box-shadow: 1px 1px 2px 0 #CCCCCC;
+    margin-bottom: 16px;
+    -webikt-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+h1,h2,h3{
+    font-family: 'DM Serif Text';
+    font-style: italic;
+}
+
+.label {
+    border-radius: 3px;
+    font-size: 0.875em;
+    font-weight: 600;
+}
