--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.css
@@ -33,3 +33,28 @@ h1,h2,h3{
     font-size: 0.875em;
     font-weight: 600;
 }
+
+.user-list tbody td .user-subhead {
+    font-size: 0.875em;
+    font-style: italic;
+  
+}
+.user-list tbody td .user-link {
+    display: block;
+    font-size: 1.25em;
+    padding-top: 3px;
+    margin-left: 60px;
+    
+}
+a {
+    color: #4FD1C5;
+    outline: none!important;
+}
+.user-list tbody td>img {
+    position: relative;
+    max-width: 50px;
+    float: left;
+    margin-right: 15px;
+    margin-left: 15px; /* nuevo*/
+   
+}
