--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.css
@@ -42,3 +42,48 @@ color:rgb(146, 209, 199);
     position: absolute;
     z-index: 1
 }
+
+.timeline-item:before {
+    background: #fff;
+    border-radius: 50%;
+    border: 3px solid #3b7ddd;
+    left: 0;
+    width: 20px;
+    height: 20px
+}
+.card {
+    margin-bottom: 30px;
+    box-shadow: 0 0 0.875rem 0 rgba(33,37,41,.05);
+}
+.card {
+    text-align: center;
+    width:  100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: initial;
+    border: 0 solid transparent;
+    border-radius: .40rem;
+    overflow:auto;
+}
+.card-body {
+    flex: 1 1 auto;
+}
+.card-header:first-child {
+    border-radius: .25rem .25rem 0 0;
+}
+.card-header {
+    border-bottom-width: 1px;
+}
+.pb-0 {
+    padding-bottom: 0!important;
+}
+.card-header {
+    padding: 1rem 1.25rem;
+    margin-bottom: 0;
+    background-color: #fff;
+    border-bottom: 0 solid transparent;
+}
