--- a/Desarrollo/SACNS/codigo/assets/css/main.css
+++ b/Desarrollo/SACNS/codigo/assets/css/main.css
@@ -78,3 +78,30 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+.text-quote-login {
+    margin-top: 100px;
+}
+
+.box-pre-login {
+    min-height: 96px;
+    width: 426px;
+    transition: all 300ms;
+}
+
+.arrow {
+    transition: all 300ms;
+}
+
+.box-pre-login:hover {
+    transform: scale(1.1,1.1);
+}
+
+.box-pre-login:hover .arrow {
+    display: block !important;
+}
+
+#containerLoginPageRight {
+    max-width: 500px;
+}
