--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P1.Cursos_cargo_Docente.css
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P1.Cursos_cargo_Docente.css
@@ -1,97 +1,89 @@
-<!DOCTYPE html>
-<html lang="es">
+.h3{
+    margin: 20px 1px; 
+    font-family:'Times New Roman', Times, serif;  
+    }
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title> Cursos a cargo - Docente</title>
-  <link rel="shortcut icon" href="..\Imagenes\logo.png" type="image/x-icon">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="P1.Curos_cargo_Docente.css" rel="stylesheet">
-    <link rel="stylesheet" href="..\0. SideBar\sidebar.css">
-    <style type="text/css">
-      .btn {
-          display       : inline-block;
-          font-size     : 1rem;
-          padding       : .0.5rem;
-      }
-      .btn:hover {
-          cursor: pointer;
-      }
-      .custom-btn {
-          font-family : monospace;
-          margin      : 0.5rem;
-          padding-top : .0.5rem;
-      }
-      .vertical {
-          transform: rotate(-90deg);
-      }
-  </style>
-</head>
- <body>
-    <div class="sidebar">
-      <div class="logo-details">
-          <div id="logoprin" class='bx bxs-graduation icon' color="blue"></div>
-          <div class="logo_name">E. SAN MARCOS</div>
-          <i class='bx bx-menu' id="btn"></i>
-      </div>
-      <ul class="nav-list d-none" id="nav-list">
-          <li>
-              <a href="#" onclick="">
-                  <i class='bx bx-building-house'></i>
-                  <span class="links_name">Principal</span>
-              </a>
-              <span class="tooltip">Principal</span>
-          </li>
-          <li>
-              <a href="#">
-                  <i class='bx bx-notepad'></i>
-                  <span class="links_name">Ingreso de Notas</span>
-              </a>
-              <span class="tooltip">Notas</span>
-          </li>
-          <li>
-              <a href="#">
-                  <i class='bx bxs-x-square'></i>
-                  <span class="links_name">Registro de Faltas</span>
-              </a>
-              <span class="tooltip">Faltas</span>
-          </li>
-          <li>
-              <a href="#">
-                  <i class='bx bx-file-find'></i>
-                  <span class="links_name">Generar Observaciones</span>
-              </a>
-              <span class="tooltip">Observaciones</span>
-          </li>
-          <div id="hogar">
-              <p>Tu cuenta</p>
-          </div>
-          <li>
-              <a href="#">
-                  <i class='bx bxs-wrench'></i>
-                  <span class="links_name">Editar</span>
-              </a>
-              <span class="tooltip">Editar</span>
-          </li>
-          <li>
-              <a href="#">
-                  <i class='bx bx-exit'></i>
-                  <span class="links_name">Salir</span>
-              </a>
-              <span class="tooltip">Salir</span>
-          </li>
-          <div id="hogar2">
-              <p>Documentación</p>
-          </div>
-          <li>
-              <a href="#">
-                  <i class='bx bx-help-circle'></i>
-                  <span class="links_name">Ayuda</span>
-              </a>
-              <span class="tooltip">Ayuda</span>
-          </li>
-      </ul>
-  </div>
+body{   
+margin-top:10px;
+background-color: #f7f7fc;
+}
+
+.timeline {
+    list-style-type: none;
+    position: relative
+}
+
+.timeline:before {
+    background: #dee2e6;
+    left: 9px;
+    width: 2px;
+    height: 100%
+}
+
+.fila{
+    text-align: center center; 
+}
+
+.subtext{
+    text-align: left;
+    font-family:'Times New Roman', Times, serif;
+}
+
+.sub2{
+text-align: left;  
+font-family:Georgia, 'Times New Roman', Times, serif, cursive;
+color:rgb(146, 209, 199);
+}
+
+.timeline-item:before,
+.timeline:before {
+    content: " ";
+    display: inline-block;
+    position: absolute;
+    z-index: 1
+}
+
+.timeline-item:before {
+    background: #fff;
+    border-radius: 50%;
+    border: 3px solid #3b7ddd;
+    left: 0;
+    width: 20px;
+    height: 20px
+}
+.card {
+    margin-bottom: 30px;
+    box-shadow: 0 0 0.875rem 0 rgba(33,37,41,.05);
+}
+.card {
+    text-align: center;
+    width: 1450px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: initial;
+    border: 0 solid transparent;
+    border-radius: .40rem;
+}
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
+.card-header:first-child {
+    border-radius: .25rem .25rem 0 0;
+}
+.card-header {
+    border-bottom-width: 1px;
+}
+.pb-0 {
+    padding-bottom: 0!important;
+}
+.card-header {
+    padding: 1rem 1.25rem;
+    margin-bottom: 0;
+    background-color: #fff;
+    border-bottom: 0 solid transparent;
+}
