--- a/Desarrollo/SACNS/codigo/assets/css/P1.Cursos.Alumno.css
+++ b/Desarrollo/SACNS/codigo/assets/css/P1.Cursos.Alumno.css
@@ -28,3 +28,30 @@ background-color: #f7f7fc;
     text-align: left;
     font-family:'Times New Roman', Times, serif;
 }
+
+.sub2{
+    text-align: left;  
+    font-family:Georgia, 'Times New Roman', Times, serif, cursive;
+    color:rgb(146, 209, 199);
+    }
+    
+.timeline-item:before,
+    .timeline:before {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        z-index: 1
+    }
+    
+.timeline-item:before {
+        background: #fff;
+        border-radius: 50%;
+        border: 3px solid #3b7ddd;
+        left: 0;
+        width: 20px;
+        height: 20px
+    }
+.card {
+        margin-bottom: 30px;
+        box-shadow: 0 0 0.875rem 0 rgba(33,37,41,.05);
+    }
