--- a/Desarrollo/SACNS/codigo/assets/css/P1.Observaciones.Alumno.css
+++ b/Desarrollo/SACNS/codigo/assets/css/P1.Observaciones.Alumno.css
@@ -51,3 +51,56 @@ color:rgb(146, 209, 199);
     width: 20px;
     height: 20px
 }
+.card {
+    margin-bottom: 30px;
+    box-shadow: 0 0 0.875rem 0 rgba(33,37,41,.05);
+}
+.card {
+    text-align: center;
+    width:  100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: initial;
+    border: 0 solid transparent;
+    border-radius: .40rem;
+    overflow:auto;
+}
+.card-body {
+    flex: 1 1 auto;
+}
+.card-header:first-child {
+    border-radius: .25rem .25rem 0 0;
+}
+.card-header {
+    border-bottom-width: 1px;
+}
+.pb-0 {
+    padding-bottom: 0!important;
+}
+.card-header {
+    padding: 1rem 1.25rem;
+    margin-bottom: 0;
+    background-color: #fff;
+    border-bottom: 0 solid transparent;
+}
+    
+#datos{
+    background-color:rgba(0,0,0,.03);
+    font-style: italic;
+    border: none;
+    border-radius: 12px;
+}
+#btn3{
+    font-family: 'DM Serif Text', serif;
+    background: #4FD1C5;
+    color: #fff;
+    padding: 0.6em;
+    border: none;
+    font-size: 20px;
+    border-radius: 12px;
+    align-self: center;
+}
