--- a/Desarrollo/SACNS/codigo/assets/css/P2.Nota.Curso.Alumno.css
+++ b/Desarrollo/SACNS/codigo/assets/css/P2.Nota.Curso.Alumno.css
@@ -20,3 +20,39 @@ body{
     -moz-border-radius: 3px;
     border-radius: 3px;
 }
+
+
+h1,h2,h3{
+    font-family: 'DM Serif Text';
+    font-style: italic;
+}
+
+.label {
+    border-radius: 3px;
+    font-size: 0.875em;
+    font-weight: 600;
+}
+.user-list tbody td .user-subhead {
+    font-size: 0.875em;
+    font-style: italic;
+  
+}
+.user-list tbody td .user-link {
+    display: block;
+    font-size: 1.25em;
+    padding-top: 3px;
+    margin-left: 60px;
+    
+}
+a {
+    color: #4FD1C5;  
+    outline: none!important;
+}
+.user-list tbody td>img {
+    position: relative;
+    max-width: 50px;
+    float: left;
+    margin-right: 15px;
+    margin-left: 15px; /* nuevo*/
+   
+}
