--- a/Desarrollo/SACNS/codigo/assets/css/P2.Nota.Curso.Alumno.css
+++ b/Desarrollo/SACNS/codigo/assets/css/P2.Nota.Curso.Alumno.css
@@ -53,6 +53,35 @@ a {
     max-width: 50px;
     float: left;
     margin-right: 15px;
-    margin-left: 15px; /* nuevo*/
+    margin-left: 15px; /* nuevo*/ 
+}
+
+
+.table thead tr th {
+    text-transform: uppercase;
+    font-size: 0.875em;
    
+    /*width: 30%;*/
+    
+}
+.table thead tr th {
+    border-bottom: 2px solid #e7ebee;
+}
+.table tbody tr td:first-child {
+    font-size: 1.125em;
+    font-weight: 300;
+    
+}
+.table tbody tr td {
+    font-size: 0.875em;
+    vertical-align: middle;
+    border-top: 1px solid #e7ebee;
+    padding: 8px 8px;
+}
+a:hover{
+text-decoration:none;
+}
+
+.user-subhead{
+    width: -20%;
 }
